<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTxt"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/chooseLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseTxt"
            android:textSize="16sp" />

        <Button
            android:id="@+id/rockBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rockBtnTxt" />

        <Button
            android:id="@+id/paperBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paperBtnTxt" />

        <Button
            android:id="@+id/scissorBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scissorBtnTxt" />

        <TextView
            android:id="@+id/scoreLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scoreTxt" />

        <TextView
            android:id="@+id/playerWeaponLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/playerWeaponTxt" />

        <TextView
            android:id="@+id/computerWeaponLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/computerWeaponTxt" />

        <TextView
            android:id="@+id/winnerLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/winnerTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>